labs/vpn-s2s-demo/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.37.4.10188",
      "templateHash": "16515921416416482506"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Admin username for test VMs"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Admin password for test VMs"
      }
    },
    "sharedKey": {
      "type": "securestring",
      "metadata": {
        "description": "Shared key for VPN connection"
      }
    },
    "deployTestVMs": {
      "type": "bool",
      "defaultValue": true,
      "metadata": {
        "description": "Deploy test VMs for connectivity testing"
      }
    },
    "gatewaySku": {
      "type": "string",
      "defaultValue": "Basic",
      "metadata": {
        "description": "VPN Gateway SKU (Basic, VpnGw1, VpnGw2, VpnGw3, VpnGw4, VpnGw5)"
      }
    },
    "enableBgp": {
      "type": "bool",
      "defaultValue": false,
      "metadata": {
        "description": "Enable BGP on VPN Gateways"
      }
    }
  },
  "variables": {
    "onpremVnetName": "vnet-onprem",
    "onpremVnetPrefix": "192.168.1.0/24",
    "onpremSubnetName": "subnet-default",
    "onpremSubnetPrefix": "192.168.1.0/27",
    "onpremGatewaySubnetPrefix": "192.168.1.224/27",
    "azureVnetName": "vnet-azure",
    "azureVnetPrefix": "10.100.0.0/22",
    "azureSubnetName": "subnet-default",
    "azureSubnetPrefix": "10.100.0.0/24",
    "azureGatewaySubnetPrefix": "10.100.3.224/27",
    "onpremGatewayName": "vng-onprem",
    "azureGatewayName": "vng-azure",
    "onpremPipName": "pip-vng-onprem",
    "azurePipName": "pip-vng-azure",
    "connectionNameOnpremToAzure": "conn-onprem-to-azure",
    "onpremVmName": "vm-onprem",
    "azureVmName": "vm-azure"
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-04-01",
      "name": "[variables('onpremVnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('onpremVnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('onpremSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('onpremSubnetPrefix')]"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('onpremGatewaySubnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-04-01",
      "name": "[variables('azureVnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('azureVnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('azureSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('azureSubnetPrefix')]"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "[variables('azureGatewaySubnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-04-01",
      "name": "[variables('onpremPipName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-04-01",
      "name": "[variables('azurePipName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworkGateways",
      "apiVersion": "2023-04-01",
      "name": "[variables('onpremGatewayName')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "vnetGatewayConfig",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/GatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', variables('onpremVnetName')))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('onpremPipName'))]"
              }
            }
          }
        ],
        "gatewayType": "Vpn",
        "vpnType": "RouteBased",
        "enableBgp": "[parameters('enableBgp')]",
        "sku": {
          "name": "[parameters('gatewaySku')]",
          "tier": "[parameters('gatewaySku')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('onpremPipName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('onpremVnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworkGateways",
      "apiVersion": "2023-04-01",
      "name": "[variables('azureGatewayName')]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "vnetGatewayConfig",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[format('{0}/subnets/GatewaySubnet', resourceId('Microsoft.Network/virtualNetworks', variables('azureVnetName')))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('azurePipName'))]"
              }
            }
          }
        ],
        "gatewayType": "Vpn",
        "vpnType": "RouteBased",
        "enableBgp": "[parameters('enableBgp')]",
        "sku": {
          "name": "[parameters('gatewaySku')]",
          "tier": "[parameters('gatewaySku')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('azurePipName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('azureVnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/connections",
      "apiVersion": "2023-04-01",
      "name": "[variables('connectionNameOnpremToAzure')]",
      "location": "[parameters('location')]",
      "properties": {
        "virtualNetworkGateway1": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('onpremGatewayName'))]",
          "properties": {}
        },
        "virtualNetworkGateway2": {
          "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('azureGatewayName'))]",
          "properties": {}
        },
        "connectionType": "Vnet2Vnet",
        "routingWeight": 10,
        "sharedKey": "[parameters('sharedKey')]",
        "enableBgp": "[parameters('enableBgp')]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('azureGatewayName'))]",
        "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('onpremGatewayName'))]"
      ]
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-04-01",
      "name": "[format('nic-{0}', variables('onpremVmName'))]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[format('{0}/subnets/{1}', resourceId('Microsoft.Network/virtualNetworks', variables('onpremVnetName')), variables('onpremSubnetName'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', variables('onpremVmName')))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', variables('onpremVmName')))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('onpremVnetName'))]"
      ]
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-04-01",
      "name": "[format('nic-{0}', variables('azureVmName'))]",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[format('{0}/subnets/{1}', resourceId('Microsoft.Network/virtualNetworks', variables('azureVnetName')), variables('azureSubnetName'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', variables('azureVmName')))]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', variables('azureVmName')))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('azureVnetName'))]"
      ]
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-04-01",
      "name": "[format('pip-{0}', variables('onpremVmName'))]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-04-01",
      "name": "[format('pip-{0}', variables('azureVmName'))]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-04-01",
      "name": "nsg-onprem",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ssh",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-icmp",
            "properties": {
              "priority": 1001,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Icmp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-04-01",
      "name": "nsg-azure",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-ssh",
            "properties": {
              "priority": 1000,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "allow-icmp",
            "properties": {
              "priority": 1001,
              "access": "Allow",
              "direction": "Inbound",
              "protocol": "Icmp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-03-01",
      "name": "[variables('onpremVmName')]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s"
        },
        "osProfile": {
          "computerName": "[variables('onpremVmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "0001-com-ubuntu-server-focal",
            "sku": "20_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('onpremVmName')))]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('onpremVmName')))]"
      ]
    },
    {
      "condition": "[parameters('deployTestVMs')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2023-03-01",
      "name": "[variables('azureVmName')]",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s"
        },
        "osProfile": {
          "computerName": "[variables('azureVmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "0001-com-ubuntu-server-focal",
            "sku": "20_04-lts-gen2",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('azureVmName')))]"
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', variables('azureVmName')))]"
      ]
    }
  ],
  "outputs": {
    "onpremVnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('onpremVnetName'))]"
    },
    "azureVnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('azureVnetName'))]"
    },
    "onpremGatewayId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('onpremGatewayName'))]"
    },
    "azureGatewayId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworkGateways', variables('azureGatewayName'))]"
    },
    "onpremGatewayPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('onpremPipName')), '2023-04-01').ipAddress]"
    },
    "azureGatewayPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('azurePipName')), '2023-04-01').ipAddress]"
    },
    "onpremVmPublicIp": {
      "type": "string",
      "value": "[if(parameters('deployTestVMs'), reference(resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', variables('onpremVmName'))), '2023-04-01').ipAddress, 'Not deployed')]"
    },
    "azureVmPublicIp": {
      "type": "string",
      "value": "[if(parameters('deployTestVMs'), reference(resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', variables('azureVmName'))), '2023-04-01').ipAddress, 'Not deployed')]"
    }
  }
}
